--- a/ama/index.html
+++ b/ama/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#4737d6">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/ama/style.css">
     <title>Ask me</title>
 </head>
 <body>
