--- a/ama/index.html
+++ b/ama/index.html
@@ -27,6 +27,6 @@
         
         <button class="btn" id="send">Kirim!</button>
     </div>
-    <script src="script.js"></script>
+    <script src="/ama/script.js"></script>
 </body>
 </html>
