--- a/ama/index.html
+++ b/ama/index.html
@@ -8,6 +8,12 @@
     <title>Ask me</title>
 </head>
 <body>
+    <div class="start-page">
+        <img src="ama-logo.png" class="ama-logo">
+        <button class="btn" id="continue">Mulai!</button>
+        <span class="age-confirmation">Dengan melanjutkan, Anda menyatakan bahwa Anda berusia minimal <strong>18 tahun</strong>, telah membaca dan menyetujui <strong>Syarat Penggunaan</strong> dan <strong>Kebijakan Privasi kami</strong>.</span>
+    </div>
+    
     <div class="page-send-message">
         <div class="message-card">
             <div class="message-card-header">
