--- a/ama/index.html
+++ b/ama/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="start-page">
-        <img src="ama-logo.png" class="ama-logo">
+        <img src="/ama/ama-logo.png" class="ama-logo">
         <button class="btn" id="continue">Mulai!</button>
         <span class="age-confirmation">Dengan melanjutkan, Anda menyatakan bahwa Anda berusia minimal <strong>18 tahun</strong>, telah membaca dan menyetujui <strong>Syarat Penggunaan</strong> dan <strong>Kebijakan Privasi kami</strong>.</span>
     </div>
