--- a/ama/index.html
+++ b/ama/index.html
@@ -8,12 +8,21 @@
     <title>Ask me</title>
 </head>
 <body>
-    <div class="start-page">
-        <img src="/ama/ama-logo.png" class="ama-logo">
+     <div class="form-container">
+    <div class="form-page" id="form-1">
+        <img src="ama-logo.png" class="ama-logo">
         <button class="btn" id="continue">Mulai!</button>
         <span class="age-confirmation">Dengan melanjutkan, Anda menyatakan bahwa Anda berusia minimal <strong>18 tahun</strong>, telah membaca dan menyetujui <strong>Syarat Penggunaan</strong> dan <strong>Kebijakan Privasi kami</strong>.</span>
     </div>
-    
+
+    <div class="form-page" id="form-2">
+        <span class="title-username">Buat nama pengguna</span>
+        <input type="text" id="username" placeholder="@" maxlength="20">
+        <button class="btn" id="btn-username">Lanjutkan!</button>
+    </div>
+</div>
+
+
     <div class="page-send-message">
         <div class="message-card">
             <div class="message-card-header">
