--- a/ama/index.html
+++ b/ama/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="form-container">
     <div class="form-page" id="form-1">
-        <img src="ama-logo.png" class="ama-logo">
+        <img src="/ama/ama-logo.png" class="ama-logo">
         <button class="btn" id="continue">Mulai!</button>
         <span class="age-confirmation">Dengan melanjutkan, Anda menyatakan bahwa Anda berusia minimal <strong>18 tahun</strong>, telah membaca dan menyetujui <strong>Syarat Penggunaan</strong> dan <strong>Kebijakan Privasi kami</strong>.</span>
     </div>
