--- a/world/test3.html
+++ b/world/test3.html
@@ -11,13 +11,13 @@
       padding: 0;
       height: 100%;
       overflow: hidden;
-      background: url('world/pemandangan.jpg') no-repeat center center fixed;
+      background: url('/world/pemandangan.jpg') no-repeat center center fixed;
       touch-action: none;
     }
 
     .circle {
       position: fixed;
-      bottom: 30px;
+      bottom: 10vh;
       left: 50%;
       transform: translateX(-50%);
       width: 300px;
