--- a/world/test3.html
+++ b/world/test3.html
@@ -11,7 +11,7 @@
       padding: 0;
       height: 100%;
       overflow: hidden;
-      background: url('https://arjunaloa.github.io/world/pemandangan.jpg') no-repeat center center fixed;
+      background: url('https://i.ibb.co/tMxNCK8g/pemandangan.jpg') no-repeat center center fixed;
       touch-action: none;
     }
 
