--- a/world/test3.html
+++ b/world/test3.html
@@ -6,17 +6,22 @@
   <title>Pola Huruf</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <style>
+
+    
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       overflow: hidden;
-      background: url('https://i.ibb.co/tMxNCK8g/pemandangan.jpg') no-repeat center center fixed;
+      background-image: url('https://i.ibb.co/tMxNCK8g/pemandangan.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
       touch-action: none;
     }
 
     .circle {
-      position: fixed;
+      position: absolute;
       bottom: 10vh;
       left: 50%;
       transform: translateX(-50%);
